# 577deputes

./: .gitignore  LICENSE  README.md
site/: .gitignore  README.md  pyproject.toml  requirements.txt
site/scripts/: bootstrap.ps1  bootstrap.sh  update.ps1  update.sh
site/src/anqp/: cli.py  config.py  db.py  logging_setup.py  schema.sql
site/src/anqp/ingestion/: amd_clusters.py  amendements.py  circo_stats.py  deputies.py  dossiers.py  download.py  parse_helpers.py  photos.py  pipeline.py  questions.py  scrutins.py  seances.py
site/src/anqp/web/: analytics.py  app.py  cartography.py  cluster_typology.py  legislature.py  queries.py  queries_custom_top.py  queries_legislative.py  refresh_loop.py
site/src/anqp/web/static/: chart-modal.js  coalitions-share.js  france-map.js  legislature-switcher.js  nav-dropdown.js  next-refresh-countdown.js  share-page.js  share.js  style.css  tops-custom.js
site/src/anqp/web/templates/: 404.html  _macros.html  _palettes.html  a_propos.html  admin_stats.html  amendement_detail.html  amendements.html  analyses.html  base.html  carte.html  clusters.html  coalitions.html  comparer.html  deputies.html  deputy_detail.html  dissidents.html  home.html  mentions_legales.html  question_detail.html  questions.html  recherche.html  scrutin_detail.html  scrutin_votants.html  scrutins.html  stats_amendements.html  stats_clusters.html  stats_deputies.html  stats_groups.html  stats_index.html  stats_min.html  stats_scrutins.html  stats_textes.html  stats_themes.html  stats_time.html  texte_amendements.html  texte_detail.html  textes.html  (+2 more)
(+5 files in other folders)
