[project]
name = "anqp"
version = "0.1.0"
description = "Local explorer for parliamentary questions of the 17th legislature (Assemblée nationale)."
requires-python = ">=3.11"
readme = "README.md"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
anqp = "anqp.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
